--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/vaibhavkatariya007/contact_list",
   "dependencies": {
+    "gh-pages": "^1.2.0",
     "react": "^16.4.1",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
@@ -11,6 +14,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "eject": "react-scripts eject"
   }
 }
